--- a/index.css
+++ b/index.css
@@ -66,7 +66,10 @@ button {
   font-weight: 700;
 }
 
-button:hover,
-button:focus {
+button:hover {
   color: turquoise;
+}
+
+button:focus {
+  color: orangered;
 }
